Fix code text background in dark mode

--- a/docs/css/mainStyle.css
+++ b/docs/css/mainStyle.css
@@ -369,4 +369,9 @@ h4.cardtextheading {
       color: lightgrey;
       background-color: #0f0f0f;
     }
+
+    em.code {
+      color: black;
+      background-color: grey;
+    }
   }
